# space-invaders

./: .gitignore  CMakeLists.txt  compile_commands.json
lib/: CMakeLists.txt  CollisionSystem.cpp  CollisionSystem.hpp  EventQueue.hpp  EventSystem.cpp  EventSystem.hpp  Events.hpp  GameMechanics.cpp  GameMechanics.hpp  GameState.cpp  GameState.hpp  GraphicsModule.cpp  GraphicsModule.hpp  InputSystem.cpp  InputSystem.hpp  MovementSystem.cpp  MovementSystem.hpp  Raycast.hpp  RenderModule.cpp  RenderModule.hpp  RenderSystem.cpp  RenderSystem.hpp  ShootingSystem.cpp  ShootingSystem.hpp  Util.hpp
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt
