# Library directory CMakeLists.txt - Defines library targets for game components
# This follows modern CMake conventions where libraries are defined separately from executables - 2026-04-09

# Future library targets will be defined here, for example:
# add_library(game-engine src/engine.cpp src/renderer.cpp)
# target_link_libraries(game-engine PUBLIC SDL3::SDL3 SDL3_image::SDL3_image)

# Placeholder for future library components:
# - Rendering system
# - Entity management
# - Input handling
# - Audio system