# Tests directory CMakeLists.txt - Defines test executables
# This follows modern CMake conventions where tests are defined separately from production code - 2026-04-09

# Future test targets will be defined here, for example:
# enable_testing()
# add_executable(test-engine tests/test_engine.cpp)
# target_link_libraries(test-engine PRIVATE game-engine)
# add_test(NAME EngineTest COMMAND test-engine)

# Placeholder for future test components:
# - Unit tests for game logic
# - Integration tests for rendering
# - Performance benchmarks